refactor: `RandomLotteryGenerator` immutable list 관련 리팩터